# roque_stat

./: Cargo.toml
src/: lib.rs  roque_stat.rs
src/roque_stat/: Chain.rs  batch_crp.rs  conditional.rs  crp.rs  kl.rs  multivariate_t.rs  mvn.rs  niw.rs  projection.rs  stream_crp.rs  table.rs  util.rs
