[package]
name = "roque_stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#ndarray = "0.14"
#ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
#ndarray-linalg = { version = "0.13", features = ["intel-mkl-static"] }
ndarray = { version = "0.15", default-features = true }
ndarray-linalg = { version = "0.16", features = ["openblas"] }
ndarray-rand = "0.14.0"

[dependencies.uuid]
version = "1.2.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
